add getTransactionIdForSession
